--- a/siteplan/site-plan.html
+++ b/siteplan/site-plan.html
@@ -142,30 +142,31 @@
             Content
         </h2>
         <h3>Home page</h3>
-        <p>
-            [Written copy for the home page here]
+        <p class="homepage">
+            Our approach is aimed at those people who want to have a new experience in this sport, who have that young spirit to be able to measure their abilities and skills together with us. If you are one of those people, you are welcome to participate in this
+            great adventure and take a fascinating experience full of fun and adrenaline. Remember that you are the only person who defines your destiny, the world is full of challenges, therefore, here you will learn the steps to do it.
         </p>
         <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/lunch.jpg" alt="image for homepage">
+        <img src="images/salmon-interest.jpg" alt="image for homepage">
 
         </ul>
-        <h3>[Page 2]</h3>
-        <p>
-            [Written copy for the Page 2 here]
+        <h3>Rivers</h3>
+        <p id="rivers">
+            Our section of the rivers has a great variety of flora, fish, landscapes and a place with a lot of history from yesteryear. We were trained to be able to provide good security to our users about these rivers to give a good experience in this sport.
         </p>
         <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/snake-rapid2.jpg" alt="image for page">
+        <img src="images/river-evening.jpg" alt="image for page">
 
         </ul>
-        <h3>[Page 3]</h3>
-        <p>
-            [Written copy for the Page 3 here]
+        <h3>Contact Us</h3>
+        <p class="contact">
+            For more information about our services, prices or questions do not hesitate to contact us at our email or our contact numbers that our operators will be at your service.
         </p>
         <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/rafting59_600.jpg" alt="image for page3">
+        <img src="images/Contact_Us.jpg" alt="image for page3">
 
         </ul>
         <hr>
