--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--Estea página es donde sólo muestra los enlaces y la pantalla en blanco -->
 
 <head>
     <meta charset="UTF-8">
