--- a/siteplan/site-plan.html
+++ b/siteplan/site-plan.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<!--ESTA PÁGINA ES DONDE MUESTRA EL WIREFRAME DE EL HOME PAGE, LA PÁGINA DE RÍOS Y EL CONTÁCTANOS -->
 
 <head>
     <meta charset="utf-8">
