--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--en esta parte de head sirve para dar titulo a la pagina osea en la parte de arriba -->
+<!--ESTE ES LA PÁGINA PRINCIPAL HOME PAGE -->
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +17,7 @@
         <nav>
             <!--esto sirve para dar click a una imagen y para que te me lleve a otra, por eso es "a" dentro de la etiqueta nav(navegación) -->
             <a href="index.html">Home</a>
-            <a href=#>Page 2</a>
+            <a href="rivers.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
 
