--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<!--Esta página es donde muestran abajo los wirefrimes del home page y la sub-página de ríos -->
 
 <head>
     <meta charset="utf-8" />
