--- a/siteplan/site-plan.html
+++ b/siteplan/site-plan.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<!--ESTA PÁGINA ES DONDE MUESTRA EL WIREFRAME DE EL HOME PAGE, LA PÁGINA DE RÍOS Y EL CONTÁCTANOS -->
+<!--ESTA PÁGINA ES DONDE MUESTRA EL WIREFRAME DE EL HOME PAGE, LA PÁGINA DE RÍOS Y EL CONTÁCTANOS DE LA SEMANA 8-->
 
 <head>
     <meta charset="utf-8">
@@ -181,19 +181,19 @@
         <p>
             [Any additional details about home that the wireframe does not make clear]
         </p>
-        <img src="#" alt="home page wireframe">
+        <img id="home" src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe">
 
         <h3>[Page 2]</h3>
         <p>
             [Any additional details about page 2 that the wireframe does not make clear]
         </p>
-        <img src="#" alt="page 2 wireframe">
+        <img src="images/Wireframe(2).png " page 2 wireframe ">
 
         <h3>[Page 3]</h3>
         <p>
             [Any additional details about page 3 that the wireframe does not make clear]
         </p>
-        <img src="#" alt="page 3 wireframe">
+        <img src="images/contact.png " alt="page 3 wireframe ">
     </main>
 </body>
 
