--- a/siteplan/site-plan.html
+++ b/siteplan/site-plan.html
@@ -28,7 +28,7 @@
 
 
         <h3>Audience</h3>
-        <p>[Your audience here]</p>
+        <p>Our main objective is to give our clients one of the most significant experiences in this sport, associated with the most qualified athletes in our country to give advice and support of our products.</p>
         <!-- change this -->
 
         <hr>
@@ -179,19 +179,19 @@
 
         <h3>Home</h3>
         <p>
-            [Any additional details about home that the wireframe does not make clear]
+            The main page focuses on the characteristics of our products and necessary information.
         </p>
         <img id="home" src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe">
 
         <h3>[Page 2]</h3>
         <p>
-            [Any additional details about page 2 that the wireframe does not make clear]
+            This page gives information about the rivers and three images are shown.
         </p>
         <img src="images/Wireframe(2).png " page 2 wireframe ">
 
         <h3>[Page 3]</h3>
         <p>
-            [Any additional details about page 3 that the wireframe does not make clear]
+            This page is related to the contact that the user makes with us or something additional that he wants to give us,
         </p>
         <img src="images/contact.png " alt="page 3 wireframe ">
     </main>
