--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="styles/style.css">
     <style>
         form {
             /* Centrar el formulario en la página */
@@ -70,21 +71,6 @@
                entre las etiquetas y sus campos de texto */
             margin-left: .5em;
         }
-        
-        #feedback {
-            background-color: antiquewhite;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            padding: .5em;
-            /* make this element invisible until we are ready for it */
-            display: none;
-        }
-        
-        .moveDown {
-            margin-top: 3em;
-        }
     </style>
 </head>
 
@@ -132,8 +118,5 @@
         });
     </script>
 </body>
-<footer>
-
-</footer>
 
 </html>
