--- a/siteplan/index.html
+++ b/siteplan/index.html
@@ -18,7 +18,7 @@
             <!--esto sirve para dar click a una imagen y para que te me lleve a otra, por eso es "a" dentro de la etiqueta nav(navegación) -->
             <a href="index.html">Home</a>
             <a href="rivers.html">Rivers</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="wwr/site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
 
         </nav>
