--- a/siteplan/index.html
+++ b/siteplan/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a id="logo_link" href="index.html"> <img class="logo" src="images/logo.png" alt="Dry Oar Logo"> </a>
+        <a id="logo_link" href="index.html"> <img class="logo" src="images/logo.png" alt="dry oar logo"> </a>
         <nav>
             <!--esto sirve para dar click a una imagen y para que te me lleve a otra, por eso es "a" dentro de la etiqueta nav(navegación) -->
             <a href="index.html">Home</a>
