--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
         <a href="siteplan/index.html">Personal Siteplan</a>
+        <a href="anotherwebpage/index.html">anotherwebpage</a>
     </nav>
     <p>Your Name Here - WDD130</p>
 </body>
