--- a/apusiqay/index.html
+++ b/apusiqay/index.html
@@ -4,37 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Apu Siqay</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="#">Experiences</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Photos</a>
-        </nav>
-    </header>
+    <div>
+        <header>
+            <nav>
+                <a href="#">Contact Us</a>
+                <a href="#">Photos</a>
+            </nav>
+        </header>
+    </div>
     <div>
         <img id="mountains" src="images/mountains.jpg" alt="mountains">
     </div>
     <div>
         <section>
-            <h1>Apu Siqay</h1>
-            <h4>The cloud mattress</h4>
+            <div id="caption">
+                <span id="apu">Apu Siqay</span>
+                <br>
+                <span id="cloud">The cloud mattress</span>
+            </div>
         </section>
     </div>
-    <div>
-        <main>
-            <h3>Located in El Triángulo, between three districts of Lima, visitors will be fascinated by a completely clear panoramic view of Lima, depending on the season of the year in which they visit the summits of this tourist circuit. </h3>
-            <h3>In the heights of southern Lima, between the districts of Villa María del Triunfo, La Molina and Pachacámac, there is a place where the sky seems to be closer. This is Apu Siqay, located in El Triángulo, named for the confluence of these three
-                districts. It is there, among the highest peaks of Metropolitan Lima, that a beautiful cushion of clouds or a completely clear panoramic view of the capital can be seen, depending on the season of the year. Those interested in sightseeing
-                without leaving the city can visit it any day of the week and on their own. All you need is time, a few suns and a good physical condition.</h3>
-        </main>
-    </div>
+    <div id="parrafo">
 
+        <main>
+            <p>Located in El Triángulo, between three districts of Lima, visitors will be fascinated by a completely clear panoramic view of Lima, depending on the season of the year in which they visit the summits of this tourist circuit. </p>
+            <p>In the heights of southern Lima, between the districts of Villa María del Triunfo, La Molina and Pachacámac, there is a place where the sky seems to be closer. This is Apu Siqay, located in El Triángulo, named for the confluence of these three
+                districts. It is there, among the highest peaks of Metropolitan Lima, that a beautiful cushion of clouds or a completely clear panoramic view of the capital can be seen, depending on the season of the year. Those interested in sightseeing
+                without leaving the city can visit it any day of the week and on their own. All you need is time, a few suns and a good physical condition.</p>
+            <h3 id="f">family initiative</h3>
+            <p>In 1968, Ausberto Tenorio arrived in the area and was fascinated by the landscape he saw. Since then, the task of converting that rocky and arid area into a tourist circuit has been imposed. Thus, he decided to finance a ten kilometer highway
+                and trail for visitor access. Several decades later it was his son, also called Ausberto, who helped him contact the artisans who have given life to figures such as El Cisne, El Inca and La Cabeza Carved, some of the great attractions
+                of the area. The dissemination work began five years ago, but just two months ago the tourist boom, propitiated by social networks, began.</p>
+            <h3 id="h">How to get to Apu siqay</h3>
+            <p>Apu Siqay comes from two Quechua words: apu, which means hill or mountain, and siqay, which translates as climbing or ascending. These two words together are interpreted as "ascending to the sacred." To get to Apu Siqay you have to take the
+                electric train to the María Auxiliadora station, then continue along Mariátegui Avenue to the final stop at Cerro Verde or the pig farm.</p>
+            <p>From there, it is the entrance to Señor de Lampa, located in the Lomas de San Gabriel, in San Juan de Miraflores, from where the road to Apu Siqay begins. The route, 5.4 kilometers long, is signposted, so that in each certain section you will
+                know the altitude and final distance. Depending on the agility, this distance can be covered between one or two hours.</p>
+        </main>
+
+    </div>
+    <div>
+        <footer>
+            <div>
+                <p id="parr">
+                    We invite you to this great excursion with family or friends so you can experience these spectacular landscapes of Lima and see nature in all its splendor thanks to our staff who will guide you on your tour and very cheap.
+                </p>
+            </div>
+            <div id="social">
+                <a href="https://facebook.com " target="_blank">
+                    <img class="facebook" src="images/facebook.png" alt="facebook icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img class="twitter" src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://youtube.com " target="_blank">
+                    <img class="youtube" src="images/youtube.png" alt="youtube icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
