--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
+        <a href="apusiqay/index.html">Personal Website</a>
         <a href="siteplan/index.html">Personal Siteplan</a>
         <a href="anotherwebpage/index.html">anotherwebpage</a>
     </nav>
