cambios añadidos de photos

--- a/apusiqay/index.html
+++ b/apusiqay/index.html
@@ -14,7 +14,7 @@
         <header>
             <nav>
                 <a href="#">Contact Us</a>
-                <a href="#">Photos</a>
+                <a href="photos.html">Photos</a>
             </nav>
         </header>
     </div>
