items agregados contactus

--- a/apusiqay/index.html
+++ b/apusiqay/index.html
@@ -13,7 +13,7 @@
     <div>
         <header>
             <nav>
-                <a href="#">Contact Us</a>
+                <a href="contactus.html">Contact Us</a>
                 <a href="photos.html">Photos</a>
             </nav>
         </header>
