--- a/apusiqay/index.html
+++ b/apusiqay/index.html
@@ -14,6 +14,8 @@
         <header>
             <nav>
                 <a href="contactus.html">Contact Us</a>
+                <a href="index.html">Home</a>
+                <a href="site-plan.html">Site Plan</a>
                 <a href="photos.html">Photos</a>
             </nav>
         </header>
