--- a/apusiqay/site-plan.html
+++ b/apusiqay/site-plan.html
@@ -48,7 +48,7 @@
         <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
         <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-        Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+        Palette URL: <a href="https://coolors.co/cb6521-fdfdfd-000000" target="_blank">https://coolors.co/cb6521-fdfdfd-000000</a>
 
 
         <table class="colors">
@@ -60,9 +60,9 @@
             </tr>
             <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
             <tr>
-                <td class="primary">[#396E94]</td>
-                <td class="secondary">[#E7C24F]</td>
-                <td class="accent1">[#A43312]</td>
+                <td class="primary">[#CB6521]</td>
+                <td class="secondary">[#FDFDFD]</td>
+                <td class="accent1">[#000000]</td>
                 <td class="accent2"></td>
             </tr>
         </table>
@@ -75,11 +75,11 @@
         <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
         <h4>
-            Heading Font: [Tajawal]
+            Heading Font: [Splash] <br> Secundary Font: [Shalimar]
             <!-- change this -->
         </h4>
         <h4>
-            Paragraph Font: [Lobster, Caveat, Baloo 2]
+            Paragraph Font: [Verdana, Geneva, Tahoma, sans-serif]
             <!-- change this -->
         </h4>
         <h3>
