--- a/apusiqay/site-plan.html
+++ b/apusiqay/site-plan.html
@@ -153,7 +153,7 @@
         <img src="images/mountains.jpg" alt="image for homepage" style="width:50%">
         <img src="images/sun.png" alt="image for homepage" style="width:50%">
 
-        </ul>
+
         <h3>Contact us</h3>
         <p id="rivers">
             The contact section has a form for you. send it to us and be able to know your concerns and suggestions so that we can improve things that our clients can feel comfortable in Apu Siqay.
@@ -189,7 +189,7 @@
         <p>
             This page gives information about the rivers and three images are shown.
         </p>
-        <img src=" images/one-page.png " page 2 wireframe ">
+        <img src=" images/one-page.png " alt="page 2 wireframe ">
 
         <h3>[Page 3]</h3>
         <p>
